Factor out lexer init from `make_lexer`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "assert.h": "c",
     "globals.h": "c",
     "stdlib.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "lexer.h": "c",
+    "parser.h": "c"
   },
   "editor.tabSize": 4
 }
