Add `ASSERT_LITERAL_EXPRESSION_XX` macros, add boolean literals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,10 @@
     "initializer_list": "c",
     "unordered_map": "c",
     "sstream": "c",
-    "__node_handle": "c"
+    "__node_handle": "c",
+    "test_utils.h": "c",
+    "errors.h": "c",
+    "__config": "cpp"
   },
   "editor.tabSize": 4
 }
